--- a/TodoApp/index.css
+++ b/TodoApp/index.css
@@ -19,6 +19,8 @@ body {
   padding: 0;
   box-sizing: border-box;
   background-color: #1ab8db;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 #app {
   width: 414px;
@@ -28,6 +30,18 @@ body {
   margin: auto;
   display: flex;
   flex-direction: column;
+}
+a {
+  text-decoration: none;
+  color: black;
+  background: none;
+  cursor: pointer;
+}
+.flex {
+  display: flex;
+}
+.beet {
+  justify-content: space-between;
 }
 .logo {
   position: absolute;
@@ -63,13 +77,44 @@ footer a {
   cursor: pointer;
   box-shadow: #222222;
   transition: all ease-in-out;
- 
 }
 footer a:hover {
-
-scale: 1.1;
- 
+  scale: 1.1;
 }
-main{
-    flex-grow: 1;
+main {
+  flex-grow: 1;
+  padding: 24px;
+}
+.view-all {
+  color: var(--color-primary);
+}
+.toto-box {
+  display: flex;
+  flex-direction: column;
+  margin-top: 24px;
+  gap: 8px;
+}
+.todo-item {
+  border-radius: 8px;
+  padding: 10px;
+  background-color: var(--color-neutral-2);
+  display: flex;
+  overflow: hidden;
+}
+.text-todo {
+  flex-grow: 1;
+  width: 20px;
+  text-wrap: nowrap;
+}
+.disable{
+    opacity: 50%;
+}
+.todo-item.disable::after{
+    position: absolute;
+    content: " ";
+     border-radius: 8px;
+     background: transparent;
+     width: 100%;
+     height: 100%;
+   
 }
