--- a/TodoApp/index.css
+++ b/TodoApp/index.css
@@ -21,8 +21,10 @@ body {
   background-color: #1ab8db;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  /* overflow: hidden; */
 }
 #app {
+  position: relative;
   width: 414px;
   height: 100vh;
   font-size: 15px;
@@ -106,10 +108,10 @@ main {
   width: 20px;
   text-wrap: nowrap;
 }
-.disable{
-    opacity: 50%;
+.disable {
+  opacity: 50%;
 }
-.todo-item.disable::after{
+/* .todo-item.disable::after{
     position: absolute;
     content: " ";
      border-radius: 8px;
@@ -117,4 +119,88 @@ main {
      width: 100%;
      height: 100%;
    
+} */
+
+.add-task {
+  position: absolute;
+  z-index: 100;
+  height: 100%;
+  width: 100%;
+  background-color: var(--color-neutral-0);
+}
+
+.add-task .header {
+  background-color: var(--color-neutral-0);
+  justify-content: space-between;
+  align-items: center;
+}
+.add-task .header h4 {
+  margin: 15px;
+  color: #1ab8db;
+}
+.add-task .header a {
+  margin: 18px;
+}
+form {
+  width: 95%;
+}
+.content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 48px;
+  flex-direction: column;
+}
+.f-input {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  gap: 10px;
+}
+input,
+textarea {
+  padding: 5px 5px;
+  border-radius: 4px;
+  border: 1px solid #dddddd;
+  transition: all ease-in-out 0.3;
+}
+input:focus,
+textarea:focus {
+  border-color: #1ab8db;
+}
+.box-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 24px;
+    gap: 15px;
+}
+
+.btn1 {
+ 
+ 
+  gap: 8px;
+  border-radius: 20px;
+  border-width: 1px;
+  padding-top: 8px;
+  padding-right: 24px;
+  padding-bottom: 8px;
+  padding-left: 16px;
+  background-color: #1ab8db;
+  border: none;
+  flex-grow: 1;
+}
+
+
+.btn2 {
+
+  gap: 8px;
+  border-radius: 20px;
+  border-width: 1px;
+  padding-top: 8px;
+  padding-right: 24px;
+  padding-bottom: 8px;
+  padding-left: 16px;
+  background: none;
+  border: #1ab8db 1px solid;
 }
